@@ -4,6 +4,7 @@ account_streamline 1.13
 - [TKT/2014/00429] Differentiate payable payment and receivable payment selections
 - [TKT/2014/00429] Add filters credit/debit on customer payment menu
 - [TKT/2014/00429] Allow debits and receivable in mark as good to pay wizard
+- [TKT/2014/00429] Fixed the type of the generated payment selection as the account can be receivable now
 
 account_streamline 1.12.1
 ~~~~~~~~~~~~~~~~~~~~~~~~~
